@@ -297,6 +297,31 @@ tst_change(void *data       __UNUSED__,
 }
 
 static void
+tsht_round(void *data       __UNUSED__,
+          Evas_Object     *obj,
+          void *event_info __UNUSED__)
+{
+   double val = elm_slider_value_get(obj);
+   double v;
+
+   v = ((double)((int)(val * 10.0))) / 10.0;
+   if (v != val) elm_slider_value_set(obj, v);
+}
+
+static void
+tsht_change(void *data       __UNUSED__,
+           Evas_Object     *obj,
+           void *event_info __UNUSED__)
+{
+   double tst = elm_config_scroll_thumbscroll_hold_threshold_get();
+   double val = elm_slider_value_get(obj);
+
+   if (tst == val) return;
+   elm_config_scroll_thumbscroll_hold_threshold_set(val);
+   elm_config_all_flush();
+}
+
+static void
 tsmt_round(void *data       __UNUSED__,
            Evas_Object     *obj,
            void *event_info __UNUSED__)
@@ -948,7 +973,7 @@ _font_overlay_change(void *data       __UNUSED__,
 static void
 _config_display_update(Evas_Object *win)
 {
-   int flush_interval, font_c, image_c, edje_file_c, edje_col_c, ts_threshould;
+   int flush_interval, font_c, image_c, edje_file_c, edje_col_c, ts_threshould, ts_hold_threshold;
    double scale, s_bounce_friction, ts_momentum_threshold, ts_friction,
           ts_border_friction, ts_sensitivity_friction, page_friction, bring_in_friction, zoom_friction;
    const char *curr_theme, *curr_engine;
@@ -970,6 +995,7 @@ _config_display_update(Evas_Object *win)
    s_bounce_friction = elm_config_scroll_bounce_friction_get();
    ts = elm_config_scroll_thumbscroll_enabled_get();
    ts_threshould = elm_config_scroll_thumbscroll_threshold_get();
+   ts_hold_threshold = elm_config_scroll_thumbscroll_hold_threshold_get();
    ts_momentum_threshold = elm_config_scroll_thumbscroll_momentum_threshold_get();
    ts_friction = elm_config_scroll_thumbscroll_friction_get();
    ts_border_friction = elm_config_scroll_thumbscroll_border_friction_get();
@@ -1003,6 +1029,9 @@ _config_display_update(Evas_Object *win)
    elm_slider_value_set(evas_object_data_get(win,
                                              "thumbscroll_threshold_slider"),
                         ts_threshould);
+   elm_slider_value_set(evas_object_data_get(win,
+                                             "ts_hold_threshold_slider"),
+                        ts_hold_threshold);
    elm_slider_value_set(evas_object_data_get(win,
                                              "ts_momentum_threshold_slider"),
                         ts_momentum_threshold);
@@ -2617,6 +2646,26 @@ _status_config_scrolling(Evas_Object *win,
 
    evas_object_smart_callback_add(sl, "changed", tst_round, NULL);
    evas_object_smart_callback_add(sl, "delay,changed", tst_change, NULL);
+
+   LABEL_FRAME_ADD("<hilight>Thumb scroll hold threshold</>");
+
+   sl = elm_slider_add(win);
+   elm_object_tooltip_text_set(sl, "This is the number of pixels the range<br/>"
+                                   "which can be scrolled, while the scroller<br/>"
+                                   "is holed");
+   evas_object_data_set(win, "thumbscroll_hold_threshold_slider", sl);
+   evas_object_size_hint_weight_set(sl, EVAS_HINT_EXPAND, 0.0);
+   evas_object_size_hint_align_set(sl, EVAS_HINT_FILL, 0.5);
+   elm_slider_span_size_set(sl, 120);
+   elm_slider_unit_format_set(sl, "%1.0f pixels");
+   elm_slider_indicator_format_set(sl, "%1.0f");
+   elm_slider_min_max_set(sl, 4.0, 500.0);
+   elm_slider_value_set(sl, elm_config_scroll_thumbscroll_threshold_get());
+   elm_box_pack_end(bx, sl);
+   evas_object_show(sl);
+
+   evas_object_smart_callback_add(sl, "changed", tsht_round, NULL);
+   evas_object_smart_callback_add(sl, "delay,changed", tsht_change, NULL);
 
    LABEL_FRAME_ADD("<hilight>Thumb scroll momentum threshold</>");
 
