@@ -159,6 +159,7 @@ struct _Elm_Config
    unsigned char vsync;
    unsigned char thumbscroll_enable;
    int           thumbscroll_threshold;
+   int           thumbscroll_hold_threshold;
    double        thumbscroll_momentum_threshold;
    double        thumbscroll_friction;
    double        thumbscroll_bounce_friction;
